<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">PhilaNGO</string>
    <string name="email">Email</string>
    <string name="signup">SIGN UP</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="organisation_email">Organisation Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email ID</string>
    <string name="hello_i_am_the_main_screen_of_this_app">Hello I am The Main Screen of this App</string>
    <string name="contributor_sign_up">Contributor Sign Up</string>
    <string name="ngo_sign_up">NGO Sign Up</string>
    <string name="organisation_sign_up">Organisation Sign Up</string>
    <string name="ngo_name">NGO Name</string>
    <string name="ngo_email">NGO Email</string>
    <string name="contributor_name">Contributor Name</string>
    <string name="contributor_email">Contributor Email</string>
    <string name="textview">TextView</string>
    <string name="headline">HeadLine</string>
    <string name="by">by</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="auh">Add Username Here</string>
    <string name="aeh">Add Email here</string>
    <string name="enter_the_amount_to_pay">Enter the amount to pay</string>
    <string name="pay">Pay</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="organisation_Name">Organisation Name</string>
    <string name="organisation_goal">Organisation Goal</string>
    <string name="create">CREATE</string>
    <string name="phone_number">Phone Number</string>
    <string name="upi_id">UPI ID</string>
    <string name="select_a_role">Select a Role</string>
    <string name="please_select_a_role_to_proceed_further">Please select a role to proceed further</string>
    <string name="next">next</string>
    <string name="contribute">Contribute</string>
    <string name="philango">PhilaNGO</string>
    <string name="login_register">Login/Register</string>
    <string name="user_name">Username</string>
    <string name="update">update</string>
    <string name="user_profile">User Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="hello_amount">Hello Amount</string>
    <string name="username">Username</string>
    <string name="about_us">About Us</string>
    <string name="logo">Logo</string>

    <string-array name="Roles">
        <item>Select a role</item>
        <item>Organisation</item>
        <item>NGO</item>
        <item>Contributor</item>
    </string-array>
</resources>